# PythiaBNS

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pythiabns.html  search.js  sitemap.xml  test_config.yaml
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  features.md  index.md  usage.md
docs/html/: index.html  search.js
docs/html/pythiabns/: spine.html
examples/: tutorial.yaml  verify_blackjax.yaml  verify_numpyro.yaml  verify_nutpie.yaml  verify_pocomc.yaml  verify_stan.yaml  verify_tempest.yaml  verify_zeus.yaml
features/: index.html
html/pythiabns/: core.html  detectors.html  inference.html  models.html
html/pythiabns/core/: config.html  registry.html
html/pythiabns/detectors/: network.html
html/pythiabns/inference/: priors.html  samplers.html
html/pythiabns/models/: interface.html  tutorial_models.html
pythiabns/: core.html  spine.html
pythiabns/core/: config.html  constants.html  plotting.html
pythiabns/inference/samplers/: stan_sampler.html
pythiabns/models/: interface.html  relations.html
search/: search_index.json
site/: index.html
site/html/pythiabns/: data_utils.html
site/search/: search_index.json
site/usage/: index.html
src/: architecture_overview.md
src/gw_pipe/: NR_strains.py  __init__.py  config.cfg  config.py  downloader.py  easter_half_reparam.priors  get_result_png.py  global_vars.py  ifo.py  last_hope.priors  lorentzian.priors  models.py  post_analysis.py  predictors.py  priors.py  registry.py  regress.pickle  requirements.txt  source_model.py  spine.py  utils.py  violinplotter.py
src/gw_pipe/EOS/: 125H.npy  B.npy  H4.npy  K_L_2H.npy  K_L_APR4.npy  K_L_B.npy  K_L_H4.npy  K_L_LS220.npy  mr.py
src/gw_pipe/core/: config.py  constants.py
src/gw_pipe/data_utils/: nr.py
src/gw_pipe/detectors/: network.py
src/gw_pipe/inference/: likelihood.py  priors.py
src/gw_pipe/models/: relations.py  waveforms.py
src/gw_pipe/priors/: easter.priors  easter_reparam.priors  soultanis.priors
src/pythiabns/: __init__.py  spine.py
src/pythiabns/EOS/: APR4.npy  BHBLP.npy  GNH3.npy  H.npy  K_L_ALF2.npy  K_L_ENG.npy  K_L_SLY.npy  LS220.npy  MPA1.npy  mr.py
src/pythiabns/core/: config.py  constants.py  plotting.py  (+1 more)
tests/: test_config.py  test_nr.py  test_priors.py  test_registry.py  test_spine.py
usage/: index.html
(+50 files in other folders)
